--- a/proj.win32/HotpotGeneral.vcxproj
+++ b/proj.win32/HotpotGeneral.vcxproj
@@ -148,14 +148,14 @@ xcopy "$(ProjectDir)..\Resources" "$(OutDir)" /D /E /I /F /Y
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\Classes\AppDelegate.cpp" />
+    <ClCompile Include="..\Classes\Food.cpp" />
     <ClCompile Include="..\Classes\MainGame.cpp" />
-    <ClCompile Include="Food.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Classes\AppDelegate.h" />
+    <ClInclude Include="..\Classes\Food.h" />
     <ClInclude Include="..\Classes\MainGame.h" />
-    <ClInclude Include="Food.h" />
     <ClInclude Include="main.h" />
   </ItemGroup>
   <ItemGroup>
